--- a/moscow.html
+++ b/moscow.html
@@ -41,6 +41,9 @@
       .container{
           background-color: seashell;
       }
+      .text {
+          text-align: left;
+      }
       </style> 
           <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" 
           crossorigin="anonymous"> 
@@ -317,7 +320,6 @@
                                 <img src="spasskaya.jpg" width=200 class="card-img-top">
                                 <div class="card-body">
                                         <h6> Спасская башня Московского кремля </h6>
-                                        <p>  </p>
                                     </div>
                                 </div>
                             </div>
@@ -325,6 +327,65 @@
                                     <p> В 1491 году при князе Иване III для укрепления северо-восточной части города была сооружена Спасская башня. Строительство выполнил архитектор Пьетро Антонио Солари. Сначала она называлась Фроловской, по имени церкви во имя Святых мучеников Фрола и Лавра, расположенной рядом. Сооружение было в два раза ниже, чем сейчас. Многоярусный верх и каменный купол в готическом стиле были возведены значительно позже - в 1624-1625 гг. английским архитектором Христофором Галовеем и русским мастером Баженом Огурцовым. Указом царя Алексея Михайловича 16 апреля 1658 года башня была переименована в Спасскую. Такое название она получила, поскольку через нее шла дорога к Спасо-Смоленскому храму. Есть мнение, что название она получила в честь иконы Спаса Нерукотворного, помещенной над воротами со стороны Красной площади. Спасские ворота – самые главные из Кремлевских ворот. Мужчины снимали головные уборы перед образом Спасителя со стороны Красной площади. Через них нельзя было проезжать верхом. По легенде, когда Наполеон проезжал через эти ворота, ветер сорвал с него треуголку. Все цари перед коронацией проходили через эти ворота. Воины уходили отсюда на решающие битвы. На протяжении многих лет Спасские ворота открывались очень редко, только в исключительных случаях, например, для проезда кортежа президента. С августа 2014 года через ворота можно выйти на Красную площадь. Попасть в Кремль по прежнему можно только через Кутафью башню. Спасская Башня - квадратная в основании и имеет 10 этажей. Ее высота - 71 метр. В середине 17 века на ней была помещена фигура двуглавого орла - герба России. Эксперты считали, что образ Спасителя над ее воротами безвозвратно потерян. Предположительно в 1937 году, в год юбилея революции, икона Спасителя, как и другие надвратные образы, была замурована. Но недавно она была найдена. По инициативе Фонда Андрея Первозванного 29 июня 2010 года специалисты начали ее реставрацию. Икона хорошо сохранилась. Ее сюжет посвящен избавлению Москвы от нашествия хана Мехмет-Гирея. Тогда, в 1521 году, преподобные Сергий и Варлаам просили Богородицу о заступничестве перед Богом. И Мехмет-Гирей отступил. Икона страдала и от пожара и во время войны с Наполеоном. После восстановления будет проводиться ее реставрация. <br> Первые часы на Спасской башне были установлены  в 1491 году. В дальнейшем они неоднократно менялись и реставрировались. Так, в 1625 году  под руководством английского мастера Христофора Галовея были сделаны новые, которые исполняли музыку. В 1705 году по указанию Петра I часы были переделаны по немецкому образцу с циферблатом на 12 часов. В 1851-1852 гг. на 8-10 ярусах установили куранты, исполняющие поочередно «Марш Преображенского Полка» и гимн «Коль славен наш Господь в Сионе» Дмитрия Бортнянского. Эти мелодии звучали до 1917 года. В 1920 году на курантах была подобрана мелодия Интернационала. В 1999 году стрелки и цифры позолотили. Куранты стали исполнять государственный гимн России. Высота римских цифр часов составляет 0,72 метра. Длина часовой стрелки - 2,97 м, минутной - 3,27 м. Часы заводятся с помощью трёх электромоторов. Бой часов осуществляется при помощи молотка, соединённого с механизмом и колоколом. Циферблаты имеют диаметр 6,12 м и выходят на четыре стороны. В 1935 году Царского орла на Спасской башне сменила первая пятиконечная звезда - символ советской эпохи. Она была медная, покрыта золотом и уральскими самоцветами. Через 2 года ее сменила рубиновая звезда. Первая звезда теперь венчает шпиль Северного речного вокзала. Размах крыльев новой звезды составляет 3,75 метра. Это чуть меньше, чем у первой. Внутри звезды круглосуточно горит лампа мощностью 5000 вт. </p>
                                 </div>
                             </div>
+                <div class="container">
+                        <div class="row">
+                            <div class="col-sm-12 col-lg-3">
+                                <div class="card">
+                                    <img src="lob.jpg" width=200 class="card-img-top">
+                                    <div class="card-body">
+                                            <h6> Лобное место </h6>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-12 col-lg-9">
+                                            <p> Лобное место – небольшое круглое возвышение с каменной оградой. В далеком прошлом это сооружение использовалось царями и другими высокопоставленными лицами во время праздничных мероприятий для оглашения указов или провозглашения торжественных речей. Изначально постройка представляла собой невысокий помост из кирпича, огражденный деревянной решеткой. После неоднократных реконструкций, Лобное место стало возвышенным сооружением в окружении невысоких каменных перил с постаментом в самом центре конструкции. В западной части Лобного места находится дверь с железной решеткой, через которую на верхнюю площадку ведут 11 ступенек. Следуя трактовке древних документов, ряд исследователей считает, что Лобное место было устроено в 1521 году в честь избавления города от нашествия татар. Впервые оно упоминается в некой рукописи от 1549 г., когда на Лобном месте двадцатилетний Иван Грозный держал речь перед горожанами, призывая примириться враждующих между собой бояр. С тех пор место часто называлось «Царевым», как царская кафедра или царский трибунал. Все последующее время, вплоть до переноса столицы Российского государства в Санкт-Петербург, постройка была главной городской трибуной, на которой народу объявлялись важнейшие указы царя; здесь дважды в год государь представлял своему народу наследника, (до тех пор, пока последний не достигал совершеннолетия); здесь объявлялось об избрании патриарха, о начале войны и о подписании мирного соглашения; около Лобного места были казнены взбунтовавшиеся стрельцы Петра I, а у его ступенек лежало обезображенное тело Лжедмитрия I.  <br> Происхождение самого названия «лобное» до сих пор на 100% не выяснено. Одно с предположений гласит, что такое название связано с ранее проводимыми здесь казнями, которые в древности называлось "складывать лбы" или "рубить лбы". Наиболее приемлемой версией считается следующая: Лобное место расположено там, где начинается Васильевский спуск, который круто опускается к Москве-реке. Места с такими перепадами высот на Руси назывались "Лбами".  </p>
+                                        </div>
+                                </div> 
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-3">
+                            <div class="card">
+                                <img src="sobor1.jpg" width=200 class="card-img-top">
+                                <div class="card-body">
+                                <h6> Собор Василия Блаженного </h6>
+                                <p> Часы работы: ежедневно 10:00-18:00; в зимний период: 11:00-17:00 <br> Внимание: с 23 августа по 2 сентября, в связи с проведением фестиваля "Спасская башня",       
+                                    музей "Покровский собор" работает с 10:00 до 16:00, касса — до 15:15 </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-lg-9">
+                            <div >  1 октября 1552 года, в праздник Покрова Божией Матери начался штурм Казани, который закончился победой русских воинов. В честь  этой победы по указу Ивана Грозного был заложен храм Покрова Божией Матери, известный сейчас как собор Василия Блаженного. Храм строился в 1552-1554 гг. в то время, когда шла война с Золотой Ордой за покорение Казанского и Астраханского царств. После каждой победы строилась деревянная церковь в честь того святого, день памяти которого отмечался в этот день. Также некоторые храмы были построены в честь знаменательных событий. К окончанию войны на одной площадке оказалось 8 церквей. Святитель Московский митрополит Макарий посоветовал царю построить один храм в камне с общим основанием. В 1555-1561 гг. зодчими Бармой и Яковлевым были построены на одном фундаменте восемь храмов: четыре из них осевые и четыре поменьше между ними. Все они разные по архитектурному убранству и имеют луковичные купола, украшенные карнизами, кокошниками, окнами, нишами. В центре возвышается девятая церковь с маленькой главкой в честь Покрова Божией Матери. В 17 веке была построена колокольня с шатровым куполом. Учитывая этот купол, на храме – 10 куполов: 
+                                    <div class="text">
+                                    <li> Центральная церковь сооружена в честь Покрова Богородицы. </li>
+                                    <li> Северная церковь освящена во имя Киприана и Устины, а позже – во имя святого Андриана и Наталии. </li>
+                                    <li> Восточная церковь освящена во имя Троицы. </li>
+                                    <li> Западная церковь освящена во имя Входа в Иерусалим в память о возвращении войска Ивана Грозного в Москву. </li>
+                                    <li> Северо-восточная церковь освящена во имя Трех Патриархов Александрийских. </li>
+                                    <li> Юго-восточная церковь — во имя Александра Свирского. </li>
+                                    <li> Юго-западная церковь — во имя Варлаама Хутынского. </li>
+                                    <li> Северо-западная — во имя Григория Армянского. </li>
+                                    <li> Южная церковь — во имя Николы Великорецкого. </li>
+                                    <li> Северо-восточная церковь освященая во имя Василия Блаженного. </li>                       
+                            </div>
+                            </div>
+                            <p>  <br> Восемь глав, построенных вокруг центральной девятой, в плане образуют фигуру, состоящую из двух квадратов, расположенных под углом в 45 градусов и представляющую собой восьмиконечную звезду. Число 8 символизирует день Воскресения Христа, а восьмиконечная звезда - символ Пресвятой Богородицы. Квадрат означает твердость и постоянство веры. Его четыре стороны означают четыре стороны света и четыре конца креста, четыре апостола-евангелиста. Центральный храм объединяет остальные церкви и символизирует покровительство над всей Россией. <br> Сейчас храм открыт как музей. Его посетители могут подняться по винтовой лестнице и полюбоваться иконостасами, в которых находятся иконы 16-19 веков и увидеть узоры внутренней галереи. Стены украшены масляной живописью и фресками 16-19 веков. В музее представлена портретная и пейзажная живопись, а также церковная утварь 16-19 веков. </p>
+                    </div>
+                </div>
+                <div class="container">
+                        <div class="row">
+                            <div class="col-sm-12 col-lg-3">
+                                <div class="card">
+                                        <img src="minin.jpg" width=200 class="card-img-top">
+                                    <div class="card-body">
+                                        <h6> Памятник Минину и Пожарскому </h6>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-lg-9">
+                                    <p> 20 февраля 1818 года при огромном стечении народа на Красной площади был торжественно открыт памятник Кузьме Минину и Дмитрию Михайловичу Пожарскому, созданный по проекту И.П.Мартоса. <br> Идея создания памятника, в котором главным лицом должен стать не князь Дмитрий Михайлович Пожарский, а Кузьма Минин — представитель русского народа, появилась у членов Вольного общества любителей российской словесности и была с оптимизмом воспринята скульптором. По общенародной подписке собирались денежые средства на сооружение памятника, который должен был увековечить освобождение в 1612 году Москвы от польской интроверции. Особую актуальность и общественное звучание эта тема получает в период Отечественной войны 1812 года. Монумент состоит из двух бронзовых фигур, помещенных на гранитном пьедестале прямоугольной формы, украшенном с передней и задней сторон многофигурными барельефами. Стоящий К.Минин энергичным жестом правой руки указывает Д.М.Пожарскому на захваченный поляками Кремль, а другой рукой вручает ему большой боевой меч. Раненый в боях князь, вдохновленный призывами посадского старосты, собирается подняться со своего ложа, опираясь на щит с изображением Спаса Нерукотворного и держась за рукоять меча. Ориентируясь на античные образцы, И.П.Мартос изображает Д.М.Пожарского в хитоне, а К.Минина облачает в русскую рубаху и штаны, при этом его голова напоминает древнегреческого бога Зевса. </p>
+                                </div>
+                        </div>
+                    </div>        
     </main>
      <footer> 
 
