--- a/proect.html
+++ b/proect.html
@@ -20,6 +20,18 @@
               text-decoration: none; 
               text-align: left; 
           } 
+          .footer {
+            flex-direction: none;
+          text-align: left;
+          background: rgb(213, 233, 255);
+          }
+          .footer-block {
+        flex-wrap: wrap;
+    }
+          .footer-block_last {
+        color: black;
+        padding-top: 15px;
+    }
       </style> 
       <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" 
       crossorigin="anonymous"> 
@@ -40,14 +52,27 @@
                              <h3> Экскурсия по памятникам </h3>  
                           </p> 
                               </a> 
-                       <a class="lit" href=""> 
+                       <a class="lit" href="file:///C:/Users/%D0%A2%D0%B5%D1%85%D0%BD%D0%BE/Desktop/%D0%BA%D1%81%D1%8E%D1%88%D0%B0%20%D0%BB%D0%B5%D1%81%D0%BD%D0%B0%D1%8F/lit.html"> 
                           <p class="lit" align="left">  
-                             <h3> Экскурсия, посвященная литературной тематике </h3> 
+                             <h3> Москва помнит своих литературных героев </h3> 
                           </p> 
                       </a> 
+                      <a class="mon" href=""> 
+                        <p class="mon" align="left">  
+                           <h3> Экскурсия, посвященная истории России </h3>
+                        </p> 
+                        <br> <br> 
                   </main> 
-                  <footer> 
-                       
+                  <footer class="footer"> 
+                      <a class="footer" href="https://vk.com/id248420251">
+                         <p> ВКонтакте </p>
+                  </a>
+                  <a class="footer" href="https://sometag.club/account/kseniaa0602/5458898260/?hl=ru">
+                        <p> Инстаграм </p>
+                    </a>
+                    <div class="footer-block footer-block_last ">
+                            <div class="copyright">Copyright ©2018 All rights reserved By .....</div>
+                        </div>
                   </footer> 
         </body> 
 </html> 
