--- a/proect.html
+++ b/proect.html
@@ -21,7 +21,7 @@
               text-align: left; 
           } 
           .footer {
-            flex-direction: none;
+            text-decoration: none;
           text-align: left;
           background: rgb(213, 233, 255);
           }
@@ -39,7 +39,7 @@
     <body> 
           <p> <img src="panorama.jpg" width=1920> </p> 
               <div class="container"> 
-                      <header class="header"> <h1> Тематические экскурсии по Москве </h1> </header> 
+                      <header class="header"> <h1> Незабывемая Москва </h1> </header> 
                   <main> 
                   </div>            
                       <a class="moscow" href="file:///C:/Users/%D0%A2%D0%B5%D1%85%D0%BD%D0%BE/Desktop/%D0%BA%D1%81%D1%8E%D1%88%D0%B0%20%D0%BB%D0%B5%D1%81%D0%BD%D0%B0%D1%8F/moscow.html"> 
@@ -47,7 +47,7 @@
                              <h3> Обзорная экскурсия по Москве </h3> 
                           </p> 
                       </a>                 
-                      <a class="mon" href=""> 
+                      <a class="mon" href="file:///C:/Users/%D0%A2%D0%B5%D1%85%D0%BD%D0%BE/Desktop/%D0%BA%D1%81%D1%8E%D1%88%D0%B0%20%D0%BB%D0%B5%D1%81%D0%BD%D0%B0%D1%8F/mon.html"> 
                           <p class="mon" align="left">  
                              <h3> Экскурсия по памятникам </h3>  
                           </p> 
@@ -64,6 +64,7 @@
                         <br> <br> 
                   </main> 
                   <footer class="footer"> 
+                      <p> Надеюсь, что мой сайт был вам полезен и интересен. Если будут вопросы, внизу оставлю ссылки на мои социальные сети, обращайтесь!</p>
                       <a class="footer" href="https://vk.com/id248420251">
                          <p> ВКонтакте </p>
                   </a>
