--- a/moscow.html
+++ b/moscow.html
@@ -60,7 +60,7 @@
       </header> 
       <main class="main">
             <div class="container">
-                <p>Представляю Вашему вниманию обзорную экскурсию по Москве. Начнем знакомство со столицей с прогулки по Старому и Новому Арбату (станиция метро "Смоленская"; Арбато-Покровская линия). </p>
+                <p>Представляю Вашему вниманию обзорную экскурсию по Москве. Этот экскурсионный маршрут можно отнести к классическим – он поможет посетившим в первый раз столицу ознакомиться с основными достопримечательностями города, а тем, кто уже знаком с Москвой, собрать образ в единое целое. <br> Начнем знакомство со столицей с прогулки по Старому и Новому Арбату (станиция метро "Смоленская"; Арбато-Покровская линия). </p>
             <div class="row">
                 <div class="col-sm-12 col-lg-3">
                     <div class="card">
